Fix Dockerfile to use non-root user and update numpy for Python 3.12

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,5 @@
 FROM python:3.12-slim
 
-# Set working directory
-WORKDIR /app
-
 # Install system dependencies for audio processing
 RUN apt-get update && apt-get install -y \
     portaudio19-dev \
@@ -11,30 +8,37 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first for better caching
-COPY requirements.txt .
+# Create non-root user for security
+RUN useradd --create-home --shell /bin/bash appuser
 
-# Install Python dependencies
-RUN pip install --upgrade pip setuptools wheel
-RUN pip install --no-cache-dir -r requirements.txt
+# Set working directory
+WORKDIR /app
+
+# Change ownership of /app to appuser
+RUN chown -R appuser:appuser /app
+
+# Switch to non-root user
+USER appuser
+
+# Copy requirements first for better caching
+COPY --chown=appuser:appuser requirements.txt .
+
+# Install Python dependencies as non-root user
+RUN pip install --upgrade pip setuptools wheel --user
+RUN pip install --no-cache-dir -r requirements.txt --user
 
 # Copy application code
-COPY src/ ./src/
-COPY models/ ./models/
+COPY --chown=appuser:appuser src/ ./src/
+COPY --chown=appuser:appuser models/ ./models/
 
 # Copy configuration
-COPY src/config.yaml ./config.yaml
-
-# Create non-root user for security
-RUN useradd --create-home --shell /bin/bash appuser && \
-    chown -R appuser:appuser /app
-USER appuser
+COPY --chown=appuser:appuser src/config.yaml ./config.yaml
 
 # Expose port for health checks (optional)
 EXPOSE 8080
 
 # Set environment variables
-ENV PYTHONPATH=/app
+ENV PYTHONPATH=/app:/home/appuser/.local/lib/python3.12/site-packages
 ENV PYTHONUNBUFFERED=1
 
 # Health check
