--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,6 @@ pyyaml==6.0.1
 # Logging
 colorlog==6.7.0
 
-# Testing
+# Testing (needed for container testing)
 pytest==7.4.0
-pytest-asyncio==0.21.1
-
-# Development
-black==23.7.0
-flake8==6.0.0 
+pytest-asyncio==0.21.1 
