--- a/src/config.yaml
+++ b/src/config.yaml
@@ -7,9 +7,18 @@ audio:
 
 # Wake-word settings
 wake_word:
+  engine: "openwakeword"         # Engine to use: "porcupine", "openwakeword", "snowboy", "pocketsphinx", "test"
   model_path: /app/models/porcupine/orac.ppn
-  sensitivity: 0.6               # Detection sensitivity (0.0-1.0)
-  keyword: "ORAC"                # Wake-word to detect
+  sensitivity: 0.6               # Detection sensitivity (0.0-1.0) - for Porcupine
+  keyword: "hey_orac"            # Wake-word to detect
+  access_key: ""                 # Picovoice access key (get from console.picovoice.ai)
+  
+  # OpenWakeWord settings (only used when engine="openwakeword")
+  threshold: 0.5                 # Detection threshold (0.0-1.0)
+  
+  # Test engine settings (only used when engine="test")
+  detection_probability: 0.01    # Probability of detection per audio chunk
+  min_detection_interval: 2.0    # Minimum seconds between detections
 
 # Buffer settings
 buffer:
