--- a/src/config.yaml
+++ b/src/config.yaml
@@ -7,7 +7,7 @@ audio:
 
 # Wake-word settings
 wake_word:
-  engine: "openwakeword"         # Engine to use: "porcupine", "openwakeword", "snowboy", "pocketsphinx", "test"
+  engine: "test"                  # Engine to use: "porcupine", "openwakeword", "snowboy", "pocketsphinx", "test"
   model_path: /app/models/porcupine/orac.ppn
   sensitivity: 0.6               # Detection sensitivity (0.0-1.0) - for Porcupine
   keyword: "hey_orac"            # Wake-word to detect
