--- a/src/config.yaml
+++ b/src/config.yaml
@@ -7,10 +7,10 @@ audio:
 
 # Wake-word settings
 wake_word:
-  engine: "test"                  # Engine to use: "porcupine", "openwakeword", "snowboy", "pocketsphinx", "test"
+  engine: "openwakeword"         # Engine to use: "porcupine", "openwakeword", "snowboy", "pocketsphinx", "test"
   model_path: /app/models/porcupine/orac.ppn
   sensitivity: 0.6               # Detection sensitivity (0.0-1.0) - for Porcupine
-  keyword: "hey_orac"            # Wake-word to detect
+  keyword: "hey_jarvis"          # Wake-word to detect (using pre-trained OpenWakeWord model)
   access_key: ""                 # Picovoice access key (get from console.picovoice.ai)
   
   # OpenWakeWord settings (only used when engine="openwakeword")
