--- a/src/config.yaml
+++ b/src/config.yaml
@@ -15,7 +15,7 @@ wake_word:
   
   # OpenWakeWord settings (only used when engine="openwakeword")
   threshold: 0.5                 # Detection threshold (0.0-1.0)
-  custom_model_path: "/app/third_party/openwakeword/custom_models/Hey_computer.onnx"
+  custom_model_path: "/app/third_party/openwakeword/custom_models/Hey_computer.onnx"  # Custom model path
   
   # Test engine settings (only used when engine="test")
   detection_probability: 0.01    # Probability of detection per audio chunk
