--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,11 @@ services:
       dockerfile: docker/Dockerfile
     container_name: hey-orac
     restart: unless-stopped
+    ports:
+      - "8080:8080"
     volumes:
       # Mount audio devices
-      - /dev/snd:/dev/snd
+      - /dev/snd:/dev/snd:rw
       # Mount ALSA configuration
       - /etc/asound.conf:/etc/asound.conf:ro
       - /usr/share/alsa:/usr/share/alsa:ro
@@ -26,9 +28,24 @@ services:
       - audio
     environment:
       - PYTHONUNBUFFERED=1
-      - LOG_LEVEL=INFO
-    networks:
-      - hey-orac-network
+      - DISPLAY=:0
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '1.0'
+        reservations:
+          memory: 256M
+          cpus: '0.5'
+    ulimits:
+      memlock: -1
+      stack: 67108864
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
+    cap_add:
+      - SYS_RAWIO
     healthcheck:
       test: ["CMD", "python", "-c", "import sys; sys.exit(0)"]
       interval: 30s
