--- a/src/config.yaml
+++ b/src/config.yaml
@@ -10,12 +10,12 @@ wake_word:
   engine: "openwakeword"         # Engine to use: "porcupine", "openwakeword", "snowboy", "pocketsphinx", "test"
   model_path: /app/models/porcupine/orac.ppn
   sensitivity: 0.6               # Detection sensitivity (0.0-1.0) - for Porcupine
-  keyword: "hey_computer"        # Wake-word to detect (using custom OpenWakeWord model)
+  keyword: "hey jarvis"        # Wake-word to detect (using built-in OpenWakeWord model)
   access_key: ""                 # Picovoice access key (get from console.picovoice.ai)
   
   # OpenWakeWord settings (only used when engine="openwakeword")
   threshold: 0.1                 # Detection threshold (0.0-1.0) - lowered for testing
-  custom_model_path: "/app/third_party/openwakeword/custom_models/Hey_computer.onnx"  # Custom model path
+  custom_model_path: ""          # Comment out custom model to use built-in models
   
   # Test engine settings (only used when engine="test")
   detection_probability: 0.01    # Probability of detection per audio chunk
