--- a/asound.conf
+++ b/asound.conf
@@ -1,11 +1,14 @@
 # ALSA configuration for USB microphone in Docker
 # This configures the SH-04 USB microphone as the default device
 
-# Default device configuration
+# Default device configuration with plug layer for format conversion
 pcm.!default {
-    type hw
-    card 0
-    device 0
+    type plug
+    slave.pcm {
+        type hw
+        card 0
+        device 0
+    }
 }
 
 ctl.!default {
@@ -23,14 +26,4 @@ pcm.usb_mic {
 ctl.usb_mic {
     type hw
     card 0
-}
-
-# Fallback configuration
-pcm.!default {
-    type plug
-    slave.pcm {
-        type hw
-        card 0
-        device 0
-    }
 } 
