Fix ALSA configuration - use simpler hardware-only config to resolve PyAudio device detection

--- a/asound.conf
+++ b/asound.conf
@@ -1,14 +1,11 @@
 # ALSA configuration for USB microphone in Docker
-# This configures the SH-04 USB microphone as the default device
+# Simple configuration that should work in containerized environment
 
-# Default device configuration with plug layer for format conversion
+# Default device - use the first available input device
 pcm.!default {
-    type plug
-    slave.pcm {
-        type hw
-        card 0
-        device 0
-    }
+    type hw
+    card 0
+    device 0
 }
 
 ctl.!default {
@@ -26,4 +23,17 @@ pcm.usb_mic {
 ctl.usb_mic {
     type hw
     card 0
+}
+
+# Disable problematic PCM configurations
+pcm.dmix {
+    type null
+}
+
+pcm.dsnoop {
+    type null
+}
+
+pcm.hdmi {
+    type null
 } 
