--- a/.asoundrc
+++ b/.asoundrc
@@ -1,96 +1,27 @@
 # ALSA configuration for USB microphone in Docker
-# Optimized for containerized environment with USB microphone (SH-04: USB Audio, hw:0,0)
+# Optimized for SH-04: USB Audio
 
 # Default PCM device for input/output
 pcm.!default {
     type hw
-    card 0
+    card SH04
     device 0
 }
 
 # Default control device
 ctl.!default {
     type hw
-    card 0
+    card SH04
 }
 
 # USB microphone specific configuration
 pcm.usb_mic {
     type hw
-    card 0
+    card SH04
     device 0
 }
 
 ctl.usb_mic {
     type hw
-    card 0
-}
-
-# Disable problematic PCM configurations to avoid errors
-pcm.dmix {
-    type null
-}
-
-pcm.dsnoop {
-    type null
-}
-
-pcm.hdmi {
-    type null
-}
-
-pcm.front {
-    type null
-}
-
-pcm.rear {
-    type null
-}
-
-pcm.center_lfe {
-    type null
-}
-
-pcm.side {
-    type null
-}
-
-pcm.surround21 {
-    type null
-}
-
-pcm.surround40 {
-    type null
-}
-
-pcm.surround41 {
-    type null
-}
-
-pcm.surround50 {
-    type null
-}
-
-pcm.surround51 {
-    type null
-}
-
-pcm.surround71 {
-    type null
-}
-
-pcm.iec958 {
-    type null
-}
-
-pcm.spdif {
-    type null
-}
-
-pcm.modem {
-    type null
-}
-
-pcm.phoneline {
-    type null
+    card SH04
 } 
