--- a/.asoundrc
+++ b/.asoundrc
@@ -1,14 +1,38 @@
 # ALSA configuration for USB microphone in Docker
 # Optimized for SH-04: USB Audio
 
-# Default PCM device for input/output
+# Default PCM device for input/output (try card index first)
+pcm.!default {
+    type hw
+    card 0
+    device 0
+}
+
+# Default control device
+ctl.!default {
+    type hw
+    card 0
+}
+
+# USB microphone specific configuration
+pcm.usb_mic {
+    type hw
+    card 0
+    device 0
+}
+
+ctl.usb_mic {
+    type hw
+    card 0
+}
+
+# Alternative configuration using card name
 pcm.!default {
     type hw
     card SH04
     device 0
 }
 
-# Default control device
 ctl.!default {
     type hw
     card SH04
