--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,9 @@ services:
       - ./.asoundrc:/home/appuser/.asoundrc:ro
       - /usr/share/alsa:/usr/share/alsa:ro
       - /etc/alsa:/etc/alsa:ro
+      # Mount ALSA libraries
+      - /usr/lib/aarch64-linux-gnu/libasound.so.2:/usr/lib/aarch64-linux-gnu/libasound.so.2:ro
+      - /usr/lib/aarch64-linux-gnu/libasound.so.2.0.0:/usr/lib/aarch64-linux-gnu/libasound.so.2.0.0:ro
       # Mount configuration for easy updates
       - ./src/config.yaml:/app/config.yaml:ro
       # Mount models directory
@@ -36,6 +39,7 @@ services:
       - DISPLAY=:0
       # ALSA configuration
       - ALSA_DEVICE=0
+      - LD_LIBRARY_PATH=/usr/lib/aarch64-linux-gnu
     deploy:
       resources:
         limits:
