--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,11 +9,13 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     portaudio19-dev \
     libasound2-dev \
+    libasound2-plugins \
     libjack-jackd2-dev \
     libsndfile1 \
     pkg-config \
     alsa-utils \
     python3-pyaudio \
+    usbutils \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
@@ -39,11 +41,9 @@ RUN /app/venv/bin/pip install --upgrade pip setuptools wheel \
     && find /app/venv -type d -name __pycache__ -exec rm -rf {} + 2>/dev/null || true \
     && find /app/venv -name "*.pyc" -delete 2>/dev/null || true
 
-# Ensure PyAudio is compiled with ALSA support - with explicit flags
+# Force reinstall PyAudio with ALSA support
 RUN /app/venv/bin/pip uninstall -y pyaudio || true \
-    && export CFLAGS="-I/usr/include/alsa" \
-    && export LDFLAGS="-lasound" \
-    && /app/venv/bin/pip install --no-cache-dir --no-binary=:all: pyaudio
+    && /app/venv/bin/pip install --force-reinstall --no-cache-dir --no-binary=:all: pyaudio
 
 # Change ownership of virtual environment to appuser
 RUN chown -R appuser:appuser /app/venv
@@ -68,6 +68,7 @@ EXPOSE 8080
 ENV PYTHONPATH=/app
 ENV PYTHONUNBUFFERED=1
 ENV PATH=/app/venv/bin:/home/appuser/.local/bin:$PATH
+ENV LD_LIBRARY_PATH=/usr/lib/aarch64-linux-gnu:$LD_LIBRARY_PATH
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
