--- a/.asoundrc
+++ b/.asoundrc
@@ -1,92 +1,17 @@
-# Enhanced ALSA configuration for USB microphone in Docker
-# Explicitly disables problematic plugins and uses direct hardware access
+# Minimal ALSA configuration for USB microphone in Docker
+# Only configure what we need - don't override system PCMs
 
-# Disable problematic plugins by redirecting to null
-pcm.dmix {
-    type null
-}
-
-pcm.dsnoop {
-    type null
-}
-
-pcm.rear {
-    type null
-}
-
-pcm.center_lfe {
-    type null
-}
-
-pcm.side {
-    type null
-}
-
-pcm.modem {
-    type null
-}
-
-pcm.phoneline {
-    type null
-}
-
-pcm.hdmi {
-    type null
-}
-
-# Default PCM for SH-04
+# Default PCM device - direct hardware access to SH-04
 pcm.!default {
     type hw
     card SH04
     device 0
 }
 
+# Default control device
 ctl.!default {
     type hw
     card SH04
-}
-
-# USB microphone specific configuration
-pcm.usb_mic {
-    type hw
-    card 0
-    device 0
-}
-
-ctl.usb_mic {
-    type hw
-    card 0
-}
-
-# Disable problematic system-wide PCMs
-pcm.cards.pcm.rear {
-    type plug
-    slave.pcm "null"
-}
-
-pcm.cards.pcm.center_lfe {
-    type plug
-    slave.pcm "null"
-}
-
-pcm.cards.pcm.side {
-    type plug
-    slave.pcm "null"
-}
-
-pcm.cards.pcm.modem {
-    type plug
-    slave.pcm "null"
-}
-
-pcm.cards.pcm.phoneline {
-    type plug
-    slave.pcm "null"
-}
-
-pcm.hdmi {
-    type plug
-    slave.pcm "null"
 }
 
 
