--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,12 +34,15 @@ services:
       - /dev/bus/usb:/dev/bus/usb
     group_add:
       - audio
+    user: "1000:29"  # Map to pi user and audio group
     environment:
       - PYTHONUNBUFFERED=1
       - DISPLAY=:0
-      # ALSA configuration
-      - ALSA_CARD=0
-      - ALSA_DEVICE=hw:0,0
+      # ALSA configuration for SH-04 USB microphone
+      - ALSA_CARD=SH04
+      - ALSA_DEVICE=hw:SH04,0
+      - ALSA_PCM_CARD=SH04
+      - ALSA_PCM_DEVICE=0
       - LD_LIBRARY_PATH=/usr/lib/aarch64-linux-gnu
     deploy:
       resources:
