--- a/.asoundrc
+++ b/.asoundrc
@@ -1,69 +1,29 @@
-# Comprehensive ALSA configuration for SH-04 USB microphone in Docker
-# Disable problematic plugins and configure proper device access
-
-# Disable problematic ALSA plugins that cause issues in containers
-pcm.dmix {
-    type plug
-    slave.pcm "null"
-}
-
-pcm.dsnoop {
-    type plug
-    slave.pcm "null"
-}
-
-pcm.rear {
-    type plug
-    slave.pcm "null"
-}
-
-pcm.center_lfe {
-    type plug
-    slave.pcm "null"
-}
-
-pcm.side {
-    type plug
-    slave.pcm "null"
-}
-
-pcm.modem {
-    type plug
-    slave.pcm "null"
-}
-
-pcm.phoneline {
-    type plug
-    slave.pcm "null"
-}
-
-pcm.hdmi {
-    type plug
-    slave.pcm "null"
-}
-
-# Configure dmix for SH-04 to allow multiple access
-pcm.dmix_sh04 {
-    type dmix
-    ipc_key 123456
-    slave {
-        pcm "hw:0,0"
-        period_size 1024
-        buffer_size 4096
-        rate 16000
+# Use card 0 (which is your SH-04)
+pcm.!default {
+    type asym
+    playback.pcm {
+        type plug
+        slave.pcm "hw:0,0"
+    }
+    capture.pcm {
+        type plug
+        slave.pcm "hw:0,0"
     }
 }
 
-# Default PCM device - use dmix for multi-access support
-pcm.!default {
-    type plug
-    slave.pcm "dmix_sh04"
-}
-
-# Default control device
 ctl.!default {
     type hw
     card 0
 }
+
+# Disable all the problematic plugins
+pcm.dmix { type plug; slave.pcm "null"; }
+pcm.dsnoop { type plug; slave.pcm "null"; }
+pcm.rear { type plug; slave.pcm "null"; }
+pcm.center_lfe { type plug; slave.pcm "null"; }
+pcm.side { type plug; slave.pcm "null"; }
+pcm.hdmi { type plug; slave.pcm "null"; }
+pcm.modem { type plug; slave.pcm "null"; }
+pcm.phoneline { type plug; slave.pcm "null"; }
 
 
