--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       - ALSA_DEVICE=hw:0,0
       - ALSA_PCM_CARD=0
       - ALSA_PCM_DEVICE=0
+      - AUDIODEV=hw:0,0
       - LD_LIBRARY_PATH=/usr/lib/aarch64-linux-gnu
     deploy:
       resources:
