--- a/src/config.yaml
+++ b/src/config.yaml
@@ -14,7 +14,7 @@ wake_word:
   access_key: ""                 # Picovoice access key (get from console.picovoice.ai)
   
   # OpenWakeWord settings (only used when engine="openwakeword")
-  threshold: 0.1                 # Detection threshold (0.0-1.0) - lowered for testing
+  threshold: 0.001               # Detection threshold (0.0-1.0) - very low for maximum sensitivity
   custom_model_path: ""          # Comment out custom model to use built-in models
   
   # Test engine settings (only used when engine="test")
