--- a/src/config.yaml
+++ b/src/config.yaml
@@ -10,7 +10,7 @@ wake_word:
   engine: "openwakeword"         # Engine to use: "porcupine", "openwakeword", "snowboy", "pocketsphinx", "test"
   model_path: /app/models/porcupine/orac.ppn
   sensitivity: 0.6               # Detection sensitivity (0.0-1.0) - for Porcupine
-  keyword: "hey jarvis"        # Wake-word to detect (using built-in OpenWakeWord model)
+  keyword: "alexa"             # Wake-word to detect (using built-in OpenWakeWord model)
   access_key: ""                 # Picovoice access key (get from console.picovoice.ai)
   
   # OpenWakeWord settings (only used when engine="openwakeword")
