--- a/src/config.yaml
+++ b/src/config.yaml
@@ -10,11 +10,11 @@ wake_word:
   engine: "openwakeword"         # Engine to use: "porcupine", "openwakeword", "snowboy", "pocketsphinx", "test"
   model_path: /app/models/porcupine/orac.ppn
   sensitivity: 0.6               # Detection sensitivity (0.0-1.0) - for Porcupine
-  keyword: "alexa"             # Wake-word to detect (using built-in OpenWakeWord model)
+  keyword: "alexa"               # Wake-word to detect (using built-in OpenWakeWord model)
   access_key: ""                 # Picovoice access key (get from console.picovoice.ai)
   
   # OpenWakeWord settings (only used when engine="openwakeword")
-  threshold: 0.001               # Detection threshold (0.0-1.0) - very low for maximum sensitivity
+  threshold: 0.1                 # Detection threshold (0.0-1.0) - reasonable threshold for debugging
   custom_model_path: ""          # Comment out custom model to use built-in models
   
   # Test engine settings (only used when engine="test")
