--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -66,7 +66,8 @@ USER appuser
 COPY --chown=appuser:appuser src/ ./src/
 COPY --chown=appuser:appuser models/ ./models/
 COPY --chown=appuser:appuser third_party/ ./third_party/
-COPY --chown=appuser:appuser assets/ ./assets/
+# Copy assets directory if it exists (for audio feedback)
+COPY --chown=appuser:appuser assets/ ./assets/ 2>/dev/null || mkdir -p ./assets/audio
 COPY --chown=appuser:appuser src/config.yaml ./config.yaml
 
 # Copy ALSA configuration for USB microphone
