--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - /usr/lib/aarch64-linux-gnu/libasound.so.2.0.0:/usr/lib/aarch64-linux-gnu/libasound.so.2.0.0:ro
       # Mount PulseAudio socket for audio output
       - /run/user/1000/pulse:/run/user/1000/pulse:rw
+      - /home/pi/.config/pulse:/home/appuser/.config/pulse:ro
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       # Mount configuration for easy updates
       - ./src/config.yaml:/app/config.yaml:ro
