--- a/src/config.yaml
+++ b/src/config.yaml
@@ -14,7 +14,7 @@ wake_word:
   access_key: ""                 # Picovoice access key (get from console.picovoice.ai)
   
   # OpenWakeWord settings (only used when engine="openwakeword")
-  threshold: 0.1                 # Detection threshold (0.0-1.0) - temporarily very low for testing
+  threshold: 0.05                # Detection threshold (0.0-1.0) - very low for testing
   custom_model_path: ""           # Use all pre-trained models (multi-model detection)
   
   # Test engine settings (only used when engine="test")
