--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,50 +126,58 @@ volumes:
   
   # TMPFS volumes (RAM-based, protects SD card)
   rms-data:
-    driver: tmpfs
+    driver: local
     driver_opts:
-      size: 10M
-      mode: 0755
+      type: tmpfs
+      device: tmpfs
+      o: size=10M,mode=0755
   
   temp-cache:
-    driver: tmpfs
+    driver: local
     driver_opts:
-      size: 50M
-      mode: 0755
+      type: tmpfs
+      device: tmpfs
+      o: size=50M,mode=0755
   
   temp-sessions:
-    driver: tmpfs
+    driver: local
     driver_opts:
-      size: 20M
-      mode: 0755
+      type: tmpfs
+      device: tmpfs
+      o: size=20M,mode=0755
   
   temp-uploads:
-    driver: tmpfs
+    driver: local
     driver_opts:
-      size: 30M
-      mode: 0755
+      type: tmpfs
+      device: tmpfs
+      o: size=30M,mode=0755
   
   # Future Home Assistant tmpfs volumes
   # ha-temp:
-  #   driver: tmpfs
+  #   driver: local
   #   driver_opts:
-  #     size: 100M
-  #     mode: 0755
+  #     type: tmpfs
+  #     device: tmpfs
+  #     o: size=100M,mode=0755
   # 
   # ha-cache:
-  #   driver: tmpfs
+  #   driver: local
   #   driver_opts:
-  #     size: 200M
-  #     mode: 0755
+  #     type: tmpfs
+  #     device: tmpfs
+  #     o: size=200M,mode=0755
   # 
   # ha-sessions:
-  #   driver: tmpfs
+  #   driver: local
   #   driver_opts:
-  #     size: 50M
-  #     mode: 0755
+  #     type: tmpfs
+  #     device: tmpfs
+  #     o: size=50M,mode=0755
   # 
   # ha-uploads:
-  #   driver: tmpfs
+  #   driver: local
   #   driver_opts:
-  #     size: 100M
-  #     mode: 0755 
+  #     type: tmpfs
+  #     device: tmpfs
+  #     o: size=100M,mode=0755 
